--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,9 +3,13 @@
 # Check our documentation for a secured config
 # https://botpress.com/docs/advanced/hosting/#secure-configuration-for-the-nginx-server
 ############################################################################################
+events {}
 
+http {
+    include /etc/nginx/conf.d/*.conf;
     upstream botpress_server {
       server botpress:3000;
+}
 
 
 # Disable sending the server identification
@@ -54,4 +58,5 @@ server {
   location / {
     proxy_pass http://botpress_server;
   }
+}
 }
