--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,15 +1,3 @@
-############################################################################################
-# This is a sample NGINX configuration file
-# Check our documentation for a secured config
-# https://botpress.com/docs/advanced/hosting/#secure-configuration-for-the-nginx-server
-############################################################################################
-events {}
-
-http {
-    include /etc/nginx/conf.d/*.conf;
-    upstream botpress_server {
-      server botpress:3000;
-}
 
 
 server {
@@ -21,7 +9,7 @@ server {
     proxy_ignore_headers Cache-Control;
     proxy_hide_header Cache-Control;
     proxy_hide_header Pragma;
-    proxy_pass botpress:3000;
+    proxy_pass localhost:3000;
     proxy_cache_valid any 30m;
     proxy_set_header Cache-Control max-age=30;
     add_header Cache-Control max-age=30;
@@ -29,7 +17,7 @@ server {
 
   # We need to add specific headers so the websockets can be set up through the reverse proxy
   location /socket.io/ {
-    proxy_pass botpress:3000/socket.io/;
+    proxy_pass localhost:3000/socket.io/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
@@ -37,7 +25,6 @@ server {
 
   # All other requests should be directed to the server
   location / {
-    proxy_pass botpress:3000;
+    proxy_pass localhost:3000;
   }
-}
 }
